--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar: "abdul1.png"
   name: "Abdullahi Adinoyi Ibrahim"
   pronouns: # example: "she/her"
-  bio: "PostDoc researcher"
+  bio: "PostDoc"
   location: "Tübingen, Germany"
   employer: "University of Tübingen"
   uri: # URL
